--- a/src/views/Products/template.html
+++ b/src/views/Products/template.html
@@ -37,7 +37,7 @@
             <button
               type="button"
               class="btn btn-outline-danger btn-sm"
-              @click="openModal('delete', item)"
+              @click="openModal('delProductModal', item)"
             >
               刪除
             </button>
@@ -47,19 +47,10 @@
     </tbody>
   </table>
   <!-- 分頁元件 -->
-  <pagination :pages="pagination" @emit-pages="getData"></pagination>
+  <!-- <pagination></pagination> -->
   <!-- 分頁元件 -->
 </div>
 <!-- Modal -->
-<product-modal
-  ref="product"
-  :product="tempProduct"
-  :is-new="isNew"
-  @update="getData"
-></product-modal>
-<del-product-modal
-  ref="delProduct"
-  :item="tempProduct"
-  @update="getData"
-></del-product-modal>
+<!-- <product-modal ref="product"></product-modal> -->
+<del-product-modal ref="delProduct" v-bind="delItem" :getData="getData" />
 <!-- Modal -->
