--- a/src/components/ProductModal/template.html
+++ b/src/components/ProductModal/template.html
@@ -26,36 +26,36 @@
             <div class="form-group mb-3">
               <label for="imageUrl" class="form-label">主要圖片</label>
               <input
-                v-model="product.imageUrl"
                 type="text"
                 class="form-control"
                 placeholder="請輸入圖片連結"
+                v-model="tempProduct.imageUrl"
               />
-              <img class="img-fluid" :src="product.imageUrl" />
+              <img class="img-fluid" :src="tempProduct.imageUrl" />
             </div>
-            <div v-if="Array.isArray(product.imagesUrl)">
+            <div v-if="Array.isArray(tempProduct.imagesUrl)">
               <div
                 class="mb-1"
-                v-for="(image, key) in product.imagesUrl"
-                :key="key"
+                v-for="(image, index) in tempProduct.imagesUrl"
+                :key="image"
               >
                 <div class="form-group">
                   <label for="imageUrl" class="form-label">圖片網址</label>
                   <input
-                    v-model="product.imagesUrl[key]"
                     type="text"
                     class="form-control"
                     placeholder="請輸入圖片連結"
+                    v-model="tempProduct.imagesUrl[index]"
                   />
                 </div>
                 <img class="img-fluid" :src="image" />
               </div>
               <div
-                v-if="!product.imagesUrl.length || product.imagesUrl[product.imagesUrl.length - 1]"
+                v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]"
               >
                 <button
                   class="btn btn-outline-primary btn-sm d-block w-100"
-                  @click="product.imagesUrl.push('')"
+                  @click="tempProduct.imagesUrl.push('')"
                 >
                   新增圖片
                 </button>
@@ -63,7 +63,7 @@
               <div v-else>
                 <button
                   class="btn btn-outline-danger btn-sm d-block w-100"
-                  @click="product.imagesUrl.pop()"
+                  @click="tempProduct.imagesUrl.pop()"
                 >
                   刪除圖片
                 </button>
@@ -72,7 +72,7 @@
             <div v-else>
               <button
                 class="btn btn-outline-primary btn-sm d-block w-100"
-                @click="createImages"
+                @click="tempProduct.imagesUrl.push(123)"
               >
                 新增圖片
               </button>
@@ -83,10 +83,10 @@
               <label for="title" class="form-label">標題</label>
               <input
                 id="title"
-                v-model="product.title"
                 type="text"
                 class="form-control"
                 placeholder="請輸入標題"
+                v-model.trim="tempProduct.title"
               />
             </div>
 
@@ -95,20 +95,20 @@
                 <label for="category" class="form-label">分類</label>
                 <input
                   id="category"
-                  v-model="product.category"
                   type="text"
                   class="form-control"
                   placeholder="請輸入分類"
+                  v-model.trim="tempProduct.category"
                 />
               </div>
               <div class="form-group col-md-6">
                 <label for="price" class="form-label">單位</label>
                 <input
                   id="unit"
-                  v-model="product.unit"
                   type="text"
                   class="form-control"
                   placeholder="請輸入單位"
+                  v-model.trim="tempProduct.unit"
                 />
               </div>
             </div>
@@ -118,22 +118,22 @@
                 <label for="origin_price" class="form-label">原價</label>
                 <input
                   id="origin_price"
-                  v-model.number="product.origin_price"
                   type="number"
                   min="0"
                   class="form-control"
                   placeholder="請輸入原價"
+                  v-model.number="tempProduct.origin_price"
                 />
               </div>
               <div class="form-group col-md-6">
                 <label for="price" class="form-label">售價</label>
                 <input
                   id="price"
-                  v-model.number="product.price"
                   type="number"
                   min="0"
                   class="form-control"
                   placeholder="請輸入售價"
+                  v-model.number="tempProduct.price"
                 />
               </div>
             </div>
@@ -143,10 +143,10 @@
               <label for="description" class="form-label">產品描述</label>
               <textarea
                 id="description"
-                v-model="product.description"
                 type="text"
                 class="form-control"
                 placeholder="請輸入產品描述"
+                v-model.trim="tempProduct.description"
               >
               </textarea>
             </div>
@@ -154,10 +154,10 @@
               <label for="content" class="form-label">說明內容</label>
               <textarea
                 id="description"
-                v-model="product.content"
                 type="text"
                 class="form-control"
                 placeholder="請輸入說明內容"
+                v-model.trim="tempProduct.content"
               >
               </textarea>
             </div>
@@ -165,11 +165,11 @@
               <div class="form-check">
                 <input
                   id="is_enabled"
-                  v-model="product.is_enabled"
                   class="form-check-input"
                   type="checkbox"
                   :true-value="1"
                   :false-value="0"
+                  v-model="tempProduct.is_enabled"
                 />
                 <label class="form-check-label" for="is_enabled"
                   >是否啟用</label
@@ -187,7 +187,7 @@
         >
           取消
         </button>
-        <button type="button" class="btn btn-primary" @click="updateProduct">
+        <button type="button" class="btn btn-primary" @click="submitHandler">
           確認
         </button>
       </div>
