--- a/src/views/Products/template.html
+++ b/src/views/Products/template.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="text-end mt-4">
-    <button class="btn btn-primary" @click="openModal('new')">
+    <button class="btn btn-primary" @click="openModal('productModal')">
       建立新的產品
     </button>
   </div>
@@ -51,6 +51,11 @@
   <!-- 分頁元件 -->
 </div>
 <!-- Modal -->
-<!-- <product-modal ref="product"></product-modal> -->
+<product-modal
+  ref="product"
+  :product="editItem"
+  :getData="getData"
+  :isNew="isNew"
+/>
 <del-product-modal ref="delProduct" v-bind="delItem" :getData="getData" />
 <!-- Modal -->
