新增分頁元件完成

--- a/src/views/Products/template.html
+++ b/src/views/Products/template.html
@@ -47,7 +47,7 @@
     </tbody>
   </table>
   <!-- 分頁元件 -->
-  <!-- <pagination></pagination> -->
+  <pagination :pagination="pagination" @changePage="getData"></pagination>
   <!-- 分頁元件 -->
 </div>
 <!-- Modal -->
