--- a/src/components/Pagination/template.html
+++ b/src/components/Pagination/template.html
@@ -1,38 +1,29 @@
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item" :class="{'disabled': pages.current_page === 1}">
-      <a
-        class="page-link"
-        href="#"
-        aria-label="Previous"
-        @click.prevent="emitPages(pages.current_page - 1)"
-      >
+    <li class="page-item" :class="{ disabled: !pagination.has_pre}">
+      <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
       </a>
     </li>
     <li
-      v-for="(item, index) in pages.total_pages"
-      :key="index"
       class="page-item"
-      :class="{'active': item === pages.current_page}"
+      :class="{ active: item === pagination.current_page}"
+      v-for="(item, index) in pagination.total_pages"
+      :key="item + 'page'"
     >
-      <span class="page-link" v-if="item === pages.current_page"
+      <span class="page-link" v-if="item === pagination.current_page"
         >{{ item }}</span
       >
-      <a class="page-link" href="#" v-else @click.prevent="emitPages(item)"
-        >{{ item }}</a
-      >
-    </li>
-    <li
-      class="page-item"
-      :class="{'disabled': pages.current_page === pages.total_pages}"
-    >
       <a
         class="page-link"
         href="#"
-        aria-label="Next"
-        @click.prevent="emitPages(pages.current_page + 1)"
+        @click.prevent="$emit('changePage', item)"
+        v-else
+        >{{ item }}</a
       >
+    </li>
+    <li class="page-item" :class="{ disabled: !pagination.has_next}">
+      <a class="page-link" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
